--- a/Quiz.html
+++ b/Quiz.html
@@ -28,7 +28,7 @@
         </div>
         <div class="flex-item-body3">
             <div> Right Page </div>
-            <img class="img" src="photo/Pho.png" width="250">
+            <img class="img" src="photo/phot.jpg" width="250">
         </div>
     </div>
     <div class="flex-container-foot">
