--- a/Ass.html
+++ b/Ass.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" type="text/css" href="Ass.css" />
 </head>
 <body>
-    <dev class="flex-header">
+    <dev class="flex-header" id="Home">
         <H1>Welcome to my page</H1>
     </dev>
     <dev class="flex-bord">
         <dev class="flex-bord-home" >
-            <a href="Ass.html" target="_self" ><h3> Home </h3></a>
+            <a href="#Home" target="_self" ><h3> Home </h3></a>
         </dev>
         <dev class="flex-bord-projects">
-            <a href="Ass.html" ><h3> Projects </h3></a>
+            <a href="#Projects" ><h3> Projects </h3></a>
         
         </dev>
         <dev class="flex-bord-contract">
-            <a href="Ass.html" target="_self" ><h3> Contract </h3></a>
+            <a href="#footer" target="_self" ><h3> Contract </h3></a>
         </dev>
     </dev>
 
-    <dev class="flex-Projects" id="AAAA">
+    <dev class="flex-Projects" id="Projects">
         <dev class="flex-Projectsa" >
             <dev class="Projects">
                 <p><H2>Projects A</H2></p>
@@ -54,7 +54,7 @@
         </dev>
     </dev>
     <hr>
-    <dev class="footer">
+    <dev class="footer" id="footer">
         <dev class="footers">
             <img src="photo/face.png" width="50" height="50">
             <img src="photo/git.png" width="50" height="50">
