--- a/Quiz.html
+++ b/Quiz.html
@@ -24,7 +24,7 @@
             <div class="body-page"> Body page </div>
             <p> Lorem ipsum dolor sit amet consectetur adipiscing elit. Afacere consequatur, 
                 in illo distuincio architecto voluptates ipsa hic delectus alias voluptate, 
-                tenetur ullam. fuga accusantium beatae iste, cupiditate error quas!</p>
+                tenetur ullam. fuga accusantium beatae iste, cupiditate error quas!!!</p>
         </div>
         <div class="flex-item-body3">
             <div> Right Page </div>
